# survinsights

./: MSK_figure_reproduce.ipynb  MSK_mean_CoxSig.py  MSK_mean_DDH.py  MSK_med_CoxSig.py  MSK_med_DDH.py  PBC_figure_reproduce.ipynb  PBC_mean_CoxSig.py  PBC_mean_DDH.py  PBC_med_CoxSig.py  PBC_med_DDH.py  PYCOX_Metabric_CoxPH.py  Pycox_explaination.ipynb  README.md  SKSURV_Veterans_CoxPH.py  compatibility_pycox.py  feature_importance.py  pyproject.toml  requirements.txt  requirements_conda.yml  simulation_figure_reproduce.ipynb  simulation_mean_CoxSig.py  simulation_mean_DDH.py  simulation_med_CoxSig.py  simulation_med_DDH.py  survexlike_tutorial.ipynb  tutorial_PBC_DDH_med.ipynb  tutorial_simulation_mean_CoxSig.ipynb  tutorials-aids.ipynb  tutorials-omics-preprocessing.ipynb  tutorials-veterans-RSF.ipynb  tutorials.ipynb  tutorials_withpycox.ipynb  utils.py
.github/workflows/: release.yaml
.ipynb_checkpoints/: Pycox_explaination-checkpoint.ipynb  survexlike_tutorial-checkpoint.ipynb  tutorials-checkpoint.ipynb  tutorials_survexlike-checkpoint.ipynb  tutorials_withpycox-checkpoint.ipynb
Lucas/: PYCOX_Metabric_CoxPH.py  PYCOX_Metabric_LogisticHazard.py  SKSURV_Veterans_CoxPH.py  survExplainer.py
Lucas/src/: cpfi.py  explainer.py  performance.py  prediction.py
Misc/: global_explaination_backup.py  local_explaination_backup.py  tutorials-aids.ipynb  tutorials.ipynb
examples/: tutorials-veterans-RSF_sksurv.ipynb
simulations/: simulation.ipynb
src/: explainer.py  global_explaination.py  local_explaination.py  performance.py  prediction.py  utils.py
(+45 files in other folders)
